Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5853

Exporting the display from an old GL capable X11 server to a modern machine causes crashes and weird behaviour.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.0
    • 4.6.0
    • GUI: OpenGL
    • None
    • 7916895ae64441b6d683f816718fc78fdafbfc62

    Description

      This is a regression from 4.5, where the GL 1 engine was picked and used by default.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kjernase Trond Kjernåsen (Inactive)
            kjernase Trond Kjernåsen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes