Fixed extension checks and usage of the GL 2 engine on old X11 systems.

This fixes a regression from 4.5, where exporting a GL capable display
from an old X11 HP/Sun workstation to a modern Linux machine causes
crashes and lots of X11 error output. Just relying on the client
GL version number is not enough under X11, since the server might
only support GL 1.1 with non or very few extensions.
Also, the extension checks worked a bit randomly since it checked
for sub-strings which might or might not occur within one or more
full extension names.

Task-number: QTBUG-5853
Reviewed-by: Kim
(cherry picked from commit 7916895ae64441b6d683f816718fc78fdafbfc62)