src/opengl/qgl_p.h
@@ -375,7 +375,8 @@ public:
         NVFloatBuffer           = 0x00000400,
         PixelBufferObject       = 0x00000800,
         FramebufferBlit         = 0x00001000,
-        NPOTTextures            = 0x00002000
+        NPOTTextures            = 0x00002000,
+        BGRATextureFormat       = 0x00004000
     };
     Q_DECLARE_FLAGS(Extensions, Extension)
 
